# ex-aiq-resources

./: .pre-commit-config.yaml  README.md
aas_poc/: Makefile  README.md  azure_search_results_en_synth.md  azure_search_results_ja.md  env.example  eval_azure_search.py  pyproject.toml
aas_poc/src/: azure_retriever.py  index_documents.py
retrieval_poc/: .gitignore  ELASTICSEARCH_SETUP.md  Makefile  README.md  convert_data_offline.py  docker-compose.yml  eval.py  eval_combo_en_synth.py  eval_combo_ja.py  eval_en_synth.py  eval_ja.py  pyproject.toml  test_elasticsearch.py
retrieval_poc/approaches/: base_retriever.py  comparison_table.md  comparison_table_combo_en_synth.md  comparison_table_combo_ja.md  comparison_table_en_synth.md  comparison_table_ja.md  markdown_writer.py  overall_results.md
retrieval_poc/approaches/bm25/: bm25_retriever.py
retrieval_poc/approaches/butlerai/: butlerai_retriever.py  convert_data_offline.py  convert_instructions_offline.py
retrieval_poc/approaches/combo/: README.md  __init__.py
retrieval_poc/approaches/combo/dense_bm25/: __init__.py  dense_bm25_retriever.py
retrieval_poc/approaches/combo/dense_text2sql/: __init__.py  dense_text2sql_retriever.py
retrieval_poc/approaches/combo/dense_text2sql_bm25/: __init__.py  dense_text2sql_bm25_retriever.py
retrieval_poc/approaches/dense/: dense_retriever.py
retrieval_poc/approaches/elasticsearch/: __init__.py  elasticsearch_retriever.py
retrieval_poc/approaches/protovec/: README.md  __init__.py  eval_protovec.py  japanese_synthetic_data_generator.py  protovec_retriever.py  synthetic_data_generator.py  synthetic_training_data.json  test_japanese_protovec.py  test_protovec.py
retrieval_poc/approaches/rag/: bm42.py  prompt.yaml  rag_retriever.py  text_to_sql.py  utils.py
retrieval_poc/approaches/random/: random_retriever.py
retrieval_poc/data/: eval_en.csv  eval_en_natural_language.csv  eval_ja.csv  instructions.json  ja_labels.csv
ruler/: API_CONTRACT.md  Dockerfile  README.md  expense_rulebook.json  expense_rulebook.schema.json  pyproject.toml  validate_rulebook.py
ruler/output_schema/: README.md  reason_processor.py  reasons.json  reasons.schema.json
ruler/ruler_server/: demo_utils.py  main.py  validator.py
ruler/static/: index.html
ruler_poc/: API_CONTRACT.md  Dockerfile  Makefile  config.toml  expense_rulebook.json  pyproject.toml  validate_rulebook.py
ruler_poc/output_schema/: __init__.py  reason_processor.py
ruler_poc/ruler_server/: demo_utils.py  main.py  validator.py
ruler_poc/static/: index.html
