[tool.poetry]
name = "aas-poc"
version = "0.1.0"
description = "Azure AI Search POC for expense rule retrieval"
authors = ["Jasper Kyle Catapang <catapang.j@moneyforward.co.jp>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
azure-search-documents = "^11.5.3"
azure-identity = "^1.25.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
index = "src.index_documents:main"
evaluate = "eval_azure_search:main"
