[tool.poetry]
name = "retrieval_poc"
version = "0.1.0"
description = "A proof of concept for retrieval approaches evaluation."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
rank-bm25 = "*"
tabulate = "*"

[tool.poetry.dev-dependencies]
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
