[tool.poetry]
name = "retrieval_poc"
version = "0.1.0"
description = "A proof of concept for retrieval approaches evaluation."
authors = ["Your Name <youremail@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.0"
rank-bm25 = "^0.2.2"
tabulate = "^0.9.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
elasticsearch = "^8.0.0"
sentence-transformers = "^2.2.0"
scikit-learn = "^1.3.0"
llama-index = "^0.14"
llama-index-retrievers-bm25 = "^0.6.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
