[tool.poetry]
name = "ruler-server"
version = "0.1.0"
description = "Expense rulebook demo server (FastAPI)"
authors = ["Jasper Kyle Catapang <catapang.j@moneyforward.co.jp>"]
readme = "README.md"
packages = [{include = "ruler_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.116.1"
uvicorn = {extras = ["standard"], version = "^0.24"}
pydantic = "^2.6"
jsonschema = "^4.21"
aiofiles = "^23.2"
starlette = ">=0.47.2"

[tool.poetry.scripts]
ruler-server = "ruler_server.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


